<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Risk Calc</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_currency_list">List of currencies</string>
    <string name="price">price:</string>
    <string name="points_at_risk">points at risk:</string>
    <string name="stop_loss">sl:</string>
    <string name="max_percent_risk">max % risk:</string>
    <string name="lots">lots</string>
    <string name="money_at_risk">money at risk:</string>
    <string name="update">update:</string>
    <string name="calculate">Calculate</string>
    <string name="balance">balance:</string>
    <string name="currency">currency:</string>
    <string name="update_content_description">download</string>
    <string name="decrease_content_description">decrease</string>
    <string name="increase_content_description">increase</string>
    <string name="tick_size">tick size:</string>
    <string name="tick_value">tick value:</string>
    <string name="min_pos">min pos:</string>
    <string name="confirm">Confirm</string>
    <string name="download_rate_content_description">download rate</string>
    <string name="slash">/</string>
    <string name="quoted_currency">quoted currency</string>
    <string name="base_currency">base currency</string>
    <string name="missing_data_in_stooq">B/D</string>
    <string name="website_link">http://skuteczne-inwestowanie.pl</string>
    <string name="disclaimer">Don\'t trade on a real account. For educational purposes only.</string>

</resources>
