<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="35"
            android:gravity="center"
            android:text="@string/base_currency"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:gravity="center"
            android:text="@string/quoted_currency"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15" />

        <Spinner
            android:id="@+id/sBaseCurrency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            />

        <Spinner
            android:id="@+id/sQuotedCurrency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:gravity="center"
            android:text="@string/tick_size"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:gravity="center"
            android:text="@string/tick_value"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:gravity="center"
            android:text="@string/min_pos"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">

        <EditText
            android:id="@+id/etTickSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/etTickValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/etMinPos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35" />

        <TextView
            android:id="@+id/tvCurrencyRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="30"
            android:gravity="center"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">

        <ImageButton
            android:id="@+id/ibDownloadRate"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="35"
            android:contentDescription="@string/download_rate_content_description"
            android:src="@android:drawable/stat_sys_download" />

        <EditText
            android:id="@+id/etCurrencyRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:enabled="false"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/bConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:text="@string/confirm" />

    </LinearLayout>

    <view
        android:id="@+id/listViewBackground"
        class="pl.skuteczne_inwestowanie.riskcalc.BackgroundContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/lvCurrenciesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </view>
</LinearLayout>